# cli-confirm

./: .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
confirm/: __init__.py  __main__.py  confirm.py
tests/: test_confirm.py
